# alpha

./: .gitignore  README.md  pyproject.toml
OpenAlpha/: QUICKSTART.md  build_strategy.py  data_generator.py  demo_complete_workflow.py  factor_analysis.py  factor_combination.py  factor_factory.py  factor_robustness.py  gp_enhanced.py  gp_mining.py  openalpha_cli.py  param_sensitivity.py  run_alpha.py
OpenAlpha/data/20251231/: amount.parquet  close.parquet  csi_500_amount.parquet  csi_500_close.parquet  csi_500_high.parquet  csi_500_low.parquet  csi_500_open.parquet  csi_500_volume.parquet  csi_500_weight.parquet  datestr.parquet  high.parquet  low.parquet  open.parquet  stock_list.parquet  volume.parquet
OpenAlpha/src/: auto_research.py  factor_dashboard.py  factor_decay_monitor.py  factor_diagnostics.py  factor_expression_inspector.py  factor_lab.py  factor_library_manager.py  factor_meta_model.py  factor_tracker.py  fast_eval.py  run_artifacts.py
OpenAlpha/src/simres/: expr.py
bridge/: __init__.py  _qmt_types.py  code_mapper.py  data_adapter.py  ic_filter.py  normalize.py  output.py  returns.py  signal_factor.py  transpose.py
docs/: bridge-spec.md  data-layer-adr.md  data-layer-spec.md  integration-roadmap.md
examples/: openalpha_to_qmt_factor.py
tests/: test_alignment.py  test_code_mapper.py  test_data_adapter.py  test_e2e_convergence.py  test_output.py  test_qmt_bridge.py
