[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openalpha-bridge"
version = "0.1.0"
description = "Bridge package for OpenAlpha factor computation and output"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenAlpha Team"}
]
keywords = ["quant", "alpha", "factor", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "bottleneck>=1.3.7",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
viz = [
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/example/openalpha-bridge"

# Package discovery: simres from OpenAlpha/src, bridge from root
[tool.setuptools]
packages = ["simres", "bridge"]
package-dir = {"simres" = "OpenAlpha/src/simres", "bridge" = "bridge"}

[tool.setuptools.package-data]
simres = ["py.typed"]
bridge = ["py.typed"]

# Tool configurations
[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.ruff.isort]
known-first-party = ["simres", "bridge"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--cov=bridge", "--cov=simres", "--cov-report=term-missing"]